--- a/gallery.html
+++ b/gallery.html
@@ -51,7 +51,7 @@
         <footer>
             <div class="footer-links">
                 <a href="about.html">ABOUT</a>
-                <a href="gallery.html">GALLERY</a>
+                <a href="index.html">HOME</a>
             </div>
             <div class="connect">
                 <p>LETS CONNECT!!</p>
