--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
         <div class="rectangle">
             <div class="carousel">
                 <div class="carousel-item">
-                    <img src="C:\Users\sprew\OneDrive\Desktop\PORTFOLIO\website\picks\3D\IMAGES\7.png" alt="Background">
+                    <img src="C:\Users\sprew\OneDrive\Documents\OWINO\sprewelowino\picks\3D\IMAGES\7.png" alt="Background">
                     <p class="meta-text4">BACKGROUND</p>
                     <h2>BACKGROUND</h2>
                     <p class="enjoy-creating">I Enjoy creating!</p>
