--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     
     <div class="container">
         <video autoplay loop muted plays-inline class="background-clip">
-            <source src="C:/Users/sprew/OneDrive/Documents/OWINO/sprewelowino/picks/3D/ANIMATIONS/ocean test.mp4" type="video/mp4">
+            <source src="C:\Users\sprew\OneDrive\Documents\OWINO\sprewelowino\picks\3D\ANIMATIONS\ocean test.mp4" type="video/mp4">
         </video>
         <header>
             <h1 class="heading">SPREWEL OWINO</h1>
